--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -19,3 +19,7 @@ k256 = { version = "0.13.4", features = ["ecdh"] }
 aes-gcm = "0.10.3"
 sha2 = "0.10.8"
 base64 = "0.22.1"
+mockall = "0.13.1"
+
+[dev-dependencies]
+mockall = "0.13.1"
