--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -18,8 +18,7 @@ aes-gcm = "0.10.3"
 sha2 = "0.10.8"
 base64 = "0.22.1"
 mockall = "0.13.1"
-alloy = { version = "0.15.6", features = ["full"] }
-tiny-hderive = "0.3.0"
+alloy = { version = "0.15.6", features = ["full","signer-mnemonic-all-languages"] }
 
 [dev-dependencies]
 mockall = "0.13.1"
