--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bip39 = { version = "2.1.0", features = ["rand"] }
+bip32 = "0.5.3"
 hex = "0.4.3"
 blahaj = "0.6"
 solana-sdk = "2.2.2"
@@ -19,6 +20,7 @@ sha2 = "0.10.8"
 base64 = "0.22.1"
 mockall = "0.13.1"
 alloy = { version = "0.15.6", features = ["full","signer-mnemonic-all-languages"] }
+bincode = "1.3.3"
 
 [dev-dependencies]
 mockall = "0.13.1"
